[workspace]
members = [
    "jupiter-core",
]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
anchor-lang = "0.30"
anchor-syn = "0.30"
solana-sdk = "=1.18.26"
solana-client = "~1.18"
solana-account-decoder = "~1.18"
solana-program-test = "~1.18"
tokio = { version = "1", features = ["full"] }

anchor-gen = { git = "https://github.com/jup-ag/anchor-gen.git", rev = "dae4c216b883ea089432ff5c00d100f4f662" }
jupiter-amm-interface = "0.4.6"

# SPL
spl-token = { version = "3.5", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.1.0", features = [
    "no-entrypoint",
] }
spl-token-2022 = { version = "3.0.5", features = [
    "no-entrypoint",
] }
